--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "rspress dev",
     "format": "prettier --write .",
     "lint": "eslint .",
+    "textlint": "textlint ./docs",
     "preview": "rspress preview"
   },
   "dependencies": {
@@ -20,6 +21,8 @@
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "textlint": "^15.5.0",
+    "textlint-rule-preset-ja-technical-writing": "^12.0.2",
     "typescript-eslint": "^8.22.0"
   }
 }
